syntax = "proto3";

option csharp_namespace = "GrpcChain";

service ChainService {
  rpc PassMessage (MessageRequest) returns (MessageReply);
}

message MessageRequest {
  string text = 1;
}

message MessageReply {
  int32 code = 1;
  string response = 2;
}
